[package]
name = "ribbonguard"
version = "0.1.0"
edition = "2024"

[dependencies]
xorf = "0.12.0"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "ribbonguard"
path = "src/main.rs"
